RESOLVED FIXED230582
[JSC] CompareStrictEq is omitting String check incorrectly
https://bugs.webkit.org/show_bug.cgi?id=230582
Summary [JSC] CompareStrictEq is omitting String check incorrectly
Yusuke Suzuki
Reported 2021-09-21 16:11:01 PDT
[JSC] CompareStrictEq is omitting String check incorrectly
Attachments
Patch (12.83 KB, patch)
2021-09-21 16:14 PDT, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2021-09-21 16:14:04 PDT
Yusuke Suzuki
Comment 2 2021-09-21 16:14:07 PDT
Mark Lam
Comment 3 2021-09-21 17:25:11 PDT
Comment on attachment 438879 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438879&action=review r=me > Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp:383 > JITCompiler::JumpList trueCase; Not due to your patch, but the comment above is incorrect: `if (left == true) {` ==> `if (left == right) {`
Yusuke Suzuki
Comment 4 2021-09-21 18:13:03 PDT
Comment on attachment 438879 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438879&action=review >> Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp:383 >> JITCompiler::JumpList trueCase; > > Not due to your patch, but the comment above is incorrect: `if (left == true) {` ==> `if (left == right) {` Thanks, fixed.
Yusuke Suzuki
Comment 5 2021-09-21 18:14:14 PDT
Note You need to log in before you can comment on or make changes to this bug.