[JSC] CompareStrictEq is omitting String check incorrectly https://bugs.webkit.org/show_bug.cgi?id=230582 rdar://83237121

Reviewed by Mark Lam.

JSTests:

* stress/compare-strict-eq-string-check.js: Added.
(foo):
(bar):

Source/JavaScriptCore:

1. Add left and right prefixes to neitherDoubleNorHeapBigIntChild and notDoubleChild edges since
   registers are named with left and right. Without this prefix, it is hard to follow in the code.
2. Remove leftGPR and rightGPR and use leftRegs.payloadGPR() and rightRegs.payloadGPR() to avoid
   having different variables pointing to the same registers.
3. DFG needsTypeCheck is done with wrong type filters. As a result, necessary checks are omitted.
   This patch fixes that. FTL does not have the same problem.

* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compileNeitherDoubleNorHeapBigIntToNotDoubleStrictEquality):
* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):

Canonical link: https://commits.webkit.org/241988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282857 268f45cc-cd09-0410-ab3c-d52691b4dbfc